# platform.core.api.nsd

./: .project  AUTHORS  CMakeLists.txt  capi-network-dns-sd.manifest  capi-network-dns-sd.pc.in
doc/: nsd_doc.h
include/: .ssdp.h.swp  CMakeLists.txt  dns-sd-util.h  dns-sd.h  ssdp.h  ssdp.h.bak
packaging/: capi-network-dns-sd.spec  capi-network-nsd.spec
pkgconfig/: CMakeLists.txt
pkgconfig/nsd-dns-sd/: CMakeLists.txt  nsd-dns-sd.pc.in
pkgconfig/nsd-ssdp/: CMakeLists.txt  nsd-ssdp.pc.in
src/: CMakeLists.txt  dns-sd.c
src/dns-sd/: CMakeLists.txt  dns-sd-util.h  dns-sd.c  dns-sd.c~
src/ssdp/: .ssdp.c.swp  CMakeLists.txt  nsd-provider-ssdp.c  nsd-provider-ssdp.h  ssdp-util.h  ssdp.c
test/: CMakeLists.txt  dns-sd-test.c  ssdp-browse-test.c  ssdp-register-test.c  ssdp-test.c
